rook-ceph/dashboard/ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/whitelist-source-range: "10.0.0.0/8, 172.16.0.0/12, 192.168.0.0/16"
  name: rook-ceph-mgr-dashboard
  namespace: rook-ceph
spec:
  rules:
    - host: rook.starbs.net
      http:
        paths:
          - backend:
              serviceName: rook-ceph-mgr-dashboard
              servicePort: http-dashboard
            path: /
  tls:
    - hosts:
        - rook.starbs.net
